# xeneon-ctl

./: .clang-tidy  .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
packaging/: io.github.aabdelghani.xeneon-ctl.metainfo.xml  xeneon-ctl.desktop
packaging/debian/: postinst
src/cli/: main.cpp
src/core/: AppSettings.cpp  AppSettings.h  DdcClient.cpp  DdcClient.h  EdgeDevice.cpp  EdgeDevice.h  SensorSource.cpp  SensorSource.h  TouchControl.cpp  TouchControl.h  WriteGate.cpp  WriteGate.h
src/proto/: BragiFrame.cpp  BragiFrame.h  Commands.h
src/transport/: HidEnumerator.cpp  HidEnumerator.h  HidRecon.cpp  HidRecon.h  HidTransport.cpp  HidTransport.h
src/ui/: CalibrationOverlay.cpp  CalibrationOverlay.h  MainWindow.cpp  MainWindow.h  TouchIndicatorOverlay.cpp  TouchIndicatorOverlay.h  TouchOverlay.cpp  TouchOverlay.h  main.cpp  theme.qss
src/ui/dashboard/: DashboardWindow.cpp  DashboardWindow.h
src/ui/pages/: DevicePage.cpp  DevicePage.h  DisplayPage.cpp  DisplayPage.h  ProbePage.cpp  ProbePage.h
src/x11/: TouchEventSource.cpp  TouchEventSource.h
tests/: test_proto.cpp
udev/: 60-corsair-xeneon.rules
